# test_ing_algo

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
test_ing_algo/common/constants/: keys.py
test_ing_algo/technical_analysis/preprocessing/: preprocessing.ipynb
