[tool.poetry]
name = "test-ing-algo"
version = "0.1.0"
description = ""
authors = ["AlvaroRDP.pr <alvarordp.pr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.11.2"
mypy = "^1.15.0"
numpy = "^2.2.4"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
commitizen = "^4.4.1"
matplotlib = "^3.10.1"
xgboost = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
